# html_to_md

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: conversion.py  streamlit_app.py  watcher.py
src/html_to_md/: __init__.py  cli.py
